objects/DataLoad__c.object
<CustomObject>
    <description>A Custom object that contains fields from multiple Salesforce Objects to simplify data load into those Objects</description>
    <fields>
        <fullName>CategoryOperation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CategoryOperation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_List__c</fullName>
        <label>Category List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompositeProductsOperation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CompositeProductsOperation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Composite_Product_SKU_List__c</fullName>
        <description>A List of Composite Products SKU in format [{SKU-1}, {SKU-2}, {SKU-3}....]</description>
        <label>Composite Product SKU List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Fully_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Fully Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Partially_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Partially Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delete_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delete Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Free_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Free Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LongDescRT__c</fullName>
        <label>LongDescRT</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LongDesc__c</fullName>
        <label>LongDesc</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market Segment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <label>Parent Product</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Data_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing Data Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_List__c</fullName>
        <inlineHelpText>Format : {Display Name-Billing Display Name-Price-Currency}
Ex : {1 Year-Monthly-10.00-USD}</inlineHelpText>
        <label>Pricing List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Class_Code__c</fullName>
        <label>Product Class Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <label>Product Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Weight__c</fullName>
        <label>Product Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantityperunit__c</fullName>
        <label>Quantityperunit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedProductsOperation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not to operate on the Related Products List provided</description>
        <label>RelatedProductsOperation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Product_SKU_List__c</fullName>
        <description>A List of Related Products SKU in format [{SKU-1}, {SKU-2}, {SKU-3}....]</description>
        <label>Related Product SKU List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <description>Unique ID for each product</description>
        <label>SKU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDescRT__c</fullName>
        <label>ShortDescRT</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ShortDesc__c</fullName>
        <label>ShortDesc</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SpecOperation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SpecOperation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spec_List__c</fullName>
        <label>Spec List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Storefront__c</fullName>
        <label>Storefront</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>DataLoad</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Filter_Based_on_Version</fullName>
        <columns>NAME</columns>
        <columns>SKU__c</columns>
        <columns>Data_Fully_Uploaded__c</columns>
        <columns>Message__c</columns>
        <columns>Data_Partially_Uploaded__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Pricing_Data_Uploaded__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Version__c</field>
            <operation>contains</operation>
            <value>5</value>
        </filters>
        <label>Filter Based on Version</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OSM</fullName>
        <columns>NAME</columns>
        <columns>Data_Fully_Uploaded__c</columns>
        <columns>Data_Partially_Uploaded__c</columns>
        <columns>Pricing_Data_Uploaded__c</columns>
        <columns>Pricing_List__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>OSM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Version</fullName>
        <columns>NAME</columns>
        <columns>Data_Fully_Uploaded__c</columns>
        <columns>Data_Partially_Uploaded__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Message__c</columns>
        <columns>Pricing_Data_Uploaded__c</columns>
        <columns>Pricing_List__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Version__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Version</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataLoads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>